--- a/src/main/resources/templates/user/about.html
+++ b/src/main/resources/templates/user/about.html
@@ -29,9 +29,9 @@
     </div>
   
     <nav class="navbar">
-        <a th:href="@{/}">HOME</a>
-        <a th:href="@{/about}">ABOUT US</a>
-        <a th:href="@{/login}">LOGIN</a>
+        <a th:href="@{/}">Home</a>
+        <a th:href="@{/about}">About Us</a>
+        <a th:href="@{/login}">Login</a>
     </nav>
   </header>
   <!-- header section end here  -->
@@ -85,7 +85,7 @@
                 <!-- Mission Section -->
                 <h2 class="large-font" style="color:#8B4513;"><b>Mission</b></h2>
                 <p><span style="font-size:28px">Handcrafted with love.</span> To provide appetizing deserts while preserving its high quality and customer's satisfaction</p>
-              
+                
                </div>
             </div>
         </div>
