--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -29,8 +29,8 @@
   </div>
 
   <nav class="navbar">
-    <a th:href="@{/about}">ABOUT US</a>
-    <a th:href="@{/login}">LOGIN</a>
+    <a th:href="@{/about}">About Us</a>
+    <a th:href="@{/login}">Login</a>
   </nav>
 </header>
 <!-- header section end here  -->
@@ -80,16 +80,13 @@
             </div>
             
             <div class="clearfix"></div>
-            
             <div style="padding:6px"></div>
-
         </div>
         <!-- end of bestsellers image gallery -->
 
-
         <!-- audio -->
         <div class="audioMusic">
-          <audio th:src="@{audio/bg-music.mp3}" controls autoplay class="my-audio " style="position: absolute; left: -9999px; top: -9999px; width: 1px; height: 1px; overflow: hidden;"></audio>
+          <audio th:src="@{audio/bg-music.mp3}" controls autoplay class="my-audio"></audio>
         </div>
 
     </main>
