--- a/src/main/resources/templates/custprofile.html
+++ b/src/main/resources/templates/custprofile.html
@@ -23,24 +23,23 @@
     </head>
 
     <!-- header section start here  -->
-  <header class="header">
+    <header class="header">
       <div class="logoContent">
-          <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
-          <h1 class="logoName">iRizq Kitchen</h1>
+        <!-- <a th:href="@{/}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a> -->
+        <a class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <h1 class="logoName">iRizq Kitchen</h1>
       </div>
     
       <nav class="navbar">
-          <a th:href="@{/catalogue}">Catalogue</a>
-          <a th:href="@{/about}">About</a>
-          <a th:href="@{/faqs}">FAQs</a>
-          <a th:href="@{/custprofile}">Profile</a>
+        <a th:href="@{/catalogue}">Catalogue</a>
+        <a th:href="@{/custprofile}">Profile</a>
       </nav>
     </header>
     <!-- header section end here  -->  
 
     <body>
       <div class="formcontainer">
-          <h1 class="registerform d-flex justify-content-center" style="font-weight: 800; font-size: 50px; margin-bottom: 5%;">CUSTOMER PROFILE</h1>
+          <h1 class="registerform d-flex justify-content-center" style="font-weight: 800; font-size: 50px; margin: 150px 0 80px 0;">CUSTOMER PROFILE</h1>
           <form 
           class="d-flex justify-content-center"
           th:action="@{/updatecust}"
@@ -154,6 +153,6 @@
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     </body>
   </html>
